# qbit

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature_request.yml  good_first_issue.yml  gui_issue.yml  security.yml
.github/repository-settings/: merge-methods.json
.github/rulesets/: 0.1.x.json  main.json  release-tags-v.json  upstream-refs.json
.github/workflows/: ci-nightly-heavy.yml  ci.yml  core-checks.yml  ibd-perf-manual.yml  lint-image-prewarm.yml  release-publish.yml  required-merge-gate.yml  rpc-docs-pages.yml  rpc-perf-manual.yml  zzz-mirror-watch.yml
.mirror/: README.md  mirror.py
ci/: README.md
ci/checks/: classify_merge_profile.py  test_classify_merge_profile.py  test_configure_docker_buildkit_config.py
ci/libbitcoinpqc/: collect-tsan-evidence.sh  evidence-helpers.sh
ci/release/: test_validate_release_artifacts.py  test_verify_testnet_release_posture.py  verify_testnet_release_posture.py
ci/scanners/: README.md  install-scanner-tools.sh  run-scanners.py  test_run_scanners.py
ci/test/: 00_setup_env.sh  03_test_script.sh
cmake/: libbitcoinpqc.cmake
contrib/devtools/: README.md  generate-p2mr-pqc-witness-vectors.py  update-libbitcoinpqc-subtree.sh
contrib/linearize/: linearize-hashes.py
contrib/testgen/: README.md
contrib/tracing/: README.md
doc/: release-notes-0.1.0-testnet4.md  release-notes-0.1.1-testnet4.md  release-trust-0.1.0-testnet4.md  release-trust-0.1.1-testnet4.md
doc/design/: p2mr-datapqchash.md
doc/development/: developer-notes.md  public-branch-and-rulesets.md
doc/integration/: mining-pool-quickstart.md
doc/man/: qbit-cli.1  qbit-qt.1  qbit-tx.1  qbit-util.1  qbit-wallet.1  qbit.1  qbitd.1
doc/policy/: mempool-replacements.md  packages.md
doc/release/: README.md  guix.md  release-process.md
doc/subtrees/: libbitcoinpqc.md
doc/user/: getting-started.md
share/examples/: qbit.conf
src/: auxpow.h  auxpow_validation.cpp  chainparams.cpp  chainparamsbase.cpp  dummywallet.cpp  init.cpp  psbt.cpp  validation.cpp  validation.h
src/consensus/: params.h
src/crypto/: pqc.cpp  pqc.h
src/interfaces/: wallet.h
src/kernel/: chainparams.cpp  chainparams.h
src/libbitcoinpqc/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
src/libbitcoinpqc/.github/workflows/: ci.yml
src/libbitcoinpqc/benches/: README.md  REPORT.md  benchmark-results.json  sig_benchmarks.rs
src/libbitcoinpqc/docs/: bounded30-signature-limit.md  compiled-code-inventory.md  parameter-benchmark-sweep.md  performance-policy.md  platform-support.md  public-release-surface.md  release-checklist.md  runtime-crypto-env.md  side-channel-policy.md  sphincs-parameter-explorer.html  vendored-crypto-provenance.md  versioning-and-supply-chain.md
src/libbitcoinpqc/examples/: basic.rs
src/libbitcoinpqc/fuzz/: Cargo.toml  README.md  check_fuzz_inventory.sh  run_all_fuzzers.sh
src/libbitcoinpqc/fuzz/fuzz_targets/: concurrent_sign_verify_fuzz.rs  huge_message_api_fuzz.rs  key_parsing_fuzz.rs  keypair_generation_fuzz.rs  malformed_inputs_fuzz.rs  message_to_indices_direct_fuzz.rs  message_to_indices_fuzz.rs  sign_verify_fuzz.rs  signature_parsing_fuzz.rs  verify_invalid_fuzz.rs  wotsc_direct_fuzz.rs
src/libbitcoinpqc/include/libbitcoinpqc/: bitcoinpqc.h  slh_dsa.h
src/libbitcoinpqc/scripts/: benchmark_param_sweep.sh  check-no-tracked-symlinks.sh  check-source-inventory.sh  check-workflow-action-pins.rb  prune-for-qbit-subtree.sh  x86_bench_5x.sh
src/libbitcoinpqc/sphincsplus/: README.md
src/libbitcoinpqc/src/: bindings_include.rs  lib.rs
src/libbitcoinpqc/tests/: algorithm_tests.rs  backend_differential_tests.rs  bounded_mode_correctness_tests.rs  c_api_contract_tests.rs  c_api_edge_cases.rs  entropy_fail_closed_tests.rs  entropy_failure_tests.rs  forsc_invariant_tests.rs  golden_vector_tests.rs  production_env_knobs_tests.rs  serialization_tests.rs  sha2_backend_tests.rs  signing_stats_tests.rs  wotsc_invariant_tests.rs
src/libbitcoinpqc/tests/c/: c_api_contract_test.c  slh_dsa_secret_key_validate_test.c  slh_dsa_sign_failure_cleanup_test.c
src/node/: blockstorage.cpp  blockstorage.h  chainstate.cpp  chainstate.h  miner.cpp
src/policy/: feerate.h
src/qt/: bitcoingui.cpp  bitcoingui.h  createwalletdialog.cpp  guiutil.cpp  guiutil.h  modaloverlay.cpp  overviewpage.cpp  overviewpage.h  qbit.qrc  receivecoinsdialog.cpp  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  walletmodel.cpp  walletmodel.h  walletview.cpp
src/rpc/: client.cpp  mining.cpp  mining.h  signmessage.cpp
src/script/: p2mr.h  sign.cpp  sign.h  signingprogress.h  signingprovider.cpp  signingprovider.h
src/test/: CMakeLists.txt  amount_tests.cpp  auxpow_tests.cpp  bip324_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  descriptor_p2mr_tests.cpp  net_peer_connection_tests.cpp  p2mr_datapqchash_tests.cpp  pow_tests.cpp  pqc_tests.cpp  psbt_p2mr_tests.cpp  rpc_tests.cpp  script_p2mr_tests.cpp  util_tests.cpp  validation_chainstatemanager_tests.cpp
src/util/: signing_timing.h
src/wallet/: init.cpp  interfaces.cpp  load.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  spend.h  types.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.h
test/functional/: feature_auxpow.py  feature_auxpow_commitment_activation.py  feature_cadence.py  feature_cadence_activation.py  feature_dbcrash.py  feature_integration_wallet_history.py  feature_p2mr.py  feature_rpc_perf.py  feature_wallet_seed_recovery.py  feature_witness_pruning.py  interface_bitcoin_cli.py  mining_version_field.py  p2p_1p1c_network.py  p2p_opportunistic_1p1c.py  rpc_psbt.py  test_runner.py  tool_wallet.py  wallet_abandonconflict.py  wallet_basic.py  wallet_bumpfee.py  wallet_create_tx.py  wallet_fallbackfee.py  wallet_fundrawtransaction.py  wallet_gethdkeys.py  wallet_hd.py  wallet_listtransactions.py  wallet_migration.py  wallet_multiwallet.py  wallet_p2mr.py  wallet_p2mr_multisig_restart.py  wallet_pqc_usage.py  wallet_send.py
(+77 files in other folders)
